Mpx9 boots from created disk images w/ my version of usim that emulates a Percom LFD-400

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 *.lst
 
 *.bak
+
+tools/lwtools/lwasm/
+
+tools/lwtools/lwcc/
+
+tools/lwtools/lwlib/
+
+tools/lwtools/lwlink/
+
+tools/lwtools/win/
+
+tools/lwtools/
