--- a/percom/psymon/Makefile
+++ b/percom/psymon/Makefile
@@ -1,21 +1,6 @@
-.SUFFIXES: .asm .s19 .ihex
-TOOLS=../../tools/
-ASM=lwasm
-#DEFINES=-DRAMTGT -DS19LOADER
-#DEFINES=-DMPX9
-DEFINES=-DNULL_DCB
-ASMFLAGS=-l$*.lst $(DEFINES)
-
-%.ihex : %.asm
-	$(ASM) $(ASMFLAGS) -fihex -o$@ $<
-
-%.s19 : %.asm
-	$(ASM) $(ASMFLAGS) -fsrec -o$@ $<
-
-%.bin : %.asm
-	$(ASM) $(ASMFLAGS) -fraw -o$@ $<
+include ../mpx9/Makefile.inc
 
 all: psymon.ihex psymon-ext.ihex
 
 clean:
-	rm *.s19 *.ihex *.lst *.log
+	-$(CLEAN)
