cleaned up .gitignore and enabled the mpx9 backspace fix, added makefile to tools to get the tools.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,12 @@
-
-*.lst
-
-*.bak
-
-tools/lwtools/lwasm/
-
-tools/lwtools/lwcc/
-
-tools/lwtools/lwlib/
-
-tools/lwtools/lwlink/
-
-tools/lwtools/win/
-
 tools/lwtools/
+tools/lwtools-4.19/
+tools/coco-disasm/
+tools/usim/
+percom/mpx9/foo1.dsk
+*.lst
+*.bak
+*.ihex
+*.bin
+*.cm
 
-tools/coco-disasm
+*.SY
