--- a/percom/mpx9/Makefile.inc
+++ b/percom/mpx9/Makefile.inc
@@ -5,7 +5,7 @@ TOOLS=../../tools/
 ASM=lwasm
 #DEFINES=-DRAMTGT -DS19LOADER
 #DEFINES=-DMPX9
-DEFINES=-DNULL_DCB
+DEFINES=-DNULL_DCB -DBS_BUG
 ASMFLAGS=-l$*.lst $(DEFINES)
 
 %.hex : %.asm
