fixes for CURDRIVE & NEWSYSDCB features, and listdcb.cm
debugged and Enabled CURDRIVE & NEWSYSDCB features. Added a Quit option to Psymon to cause an invalid instruction that will break to PsyMon. Finished the /S option for listdcb.cm

--- a/percom/mpx9/Makefile.inc
+++ b/percom/mpx9/Makefile.inc
@@ -6,7 +6,7 @@ ASMINCLUDE=-I ../..
 ASM=lwasm
 #DEFINES=-DRAMTGT -DS19LOADER
 #DEFINES=-DMPX9
-DEFINES=-DNULL_DCB -DBS_BUG
+DEFINES=-DNULL_DCB -DBS_BUG -DCURDRIVE -DNEWSYSDCB 
 ASMFLAGS=-l$*.lst $(ASMINCLUDE) $(DEFINES)
 
 %.hex : %.asm
@@ -26,3 +26,6 @@ ASMFLAGS=-l$*.lst $(ASMINCLUDE) $(DEFINES)
 
 .PHONY: clean
 CLEAN=$(RM) -f *.s19 *.ihex *.ihex *.lst *.log *.bin *.cm
+
+
+# AEA1
