Added New Command Line
added NCmdLine.asm utility, some extra ASCII characters to psymon.i and changes to makefile. This is a checkpoint to get it archived and is still under development.

--- a/percom/mpx9/my-utils/Makefile
+++ b/percom/mpx9/my-utils/Makefile
@@ -1,6 +1,6 @@
 include ../Makefile.inc
 
-SRCS=do.asm echo.asm HelloWorld.asm HexDump.asm listdcb.asm mycopy.asm name.asm set.asm RamDiskL.asm
+SRCS=do.asm echo.asm HelloWorld.asm HexDump.asm listdcb.asm mycopy.asm name.asm set.asm RamDiskL.asm nCmdLine.asm
 OBJS=$(SRCS:asm=cm)
 TGTDSK=../foo1.dsk
 
