Revised Makefile system to play nicely with Sublime text build system.

--- a/percom/mpx9/Makefile
+++ b/percom/mpx9/Makefile
@@ -1,9 +1,34 @@
 include Makefile.inc
 
 EPROMS=../psymon/psymon.ihex ../psymon/psymon-ext.ihex boot-rom/BootRom.ihex
-TGTDSK=foo1.dsk
+TGTDSK=system.dsk
 
-all: test
+UTILS=create list memtst OutVectr
+UTIL_SRCS=$(foreach file,$(UTILS),utils/$(file).asm)
+UTIL_OBJS=$(UTIL_SRCS:.asm=.cm)
+# $(info UTIL_SRCS $(UTIL_SRCS))
+# $(info UTIL_OBJS $(UTIL_OBJS))
+
+XUTIL_SRCS=list.asm
+XUTIL_FILES=$(foreach file,$(XUTIL_SRCS),utils/$(file))
+$(info XUTIL_SRCS $(XUTIL_SRCS))
+$(info XUTIL_FILES $(XUTIL_FILES))
+# 	cp list.asm list.s
+# 	../$(MPX9DSK) $(TGTDSK) -f -w -n list.s
+# 	$(RM) list.s
+
+
+MYUTILS=do echo HelloWorld HexDump listdcb mycopy name \
+	set RamDiskL nCmdLine loadhi MemEdit
+MYUTIL_SRCS=$(foreach file,$(MYUTILS),my-utils/$(file).asm)
+MYUTIL_OBJS=$(MYUTIL_SRCS:.asm=.cm)
+# $(info MYUTIL_SRCS $(MYUTIL_SRCS))
+# $(info MYUTIL_OBJS $(MYUTIL_OBJS))
+
+XMYUTIL_SRCS=
+XMYUTIL_FILES=$(foreach file,$(XMYUTIL_SRCS),my-utils/$(file))
+
+all: $(EPROMS) $(TGTDSK)
 
 ../psymon/psymon.ihex: ../psymon/psymon.asm
 ../psymon/psymon-ext.ihex: ../psymon/psymon.asm
@@ -13,22 +38,21 @@ os/mpx9.bin: os/mpx9.asm
 os/MPX9.SY: os/mpx9.bin
 	mv os/mpx9.bin os/MPX9.SY
 
-sub-makes:
-	$(MAKE) -C ../psymon all
-	$(MAKE) -C boot-rom all
-	$(MAKE) -C boot-sector all
-	$(MAKE) -C os all
-	$(MAKE) -C utils all
-	$(MAKE) -C my-utils all
-# 	$(MAKE) -C FigForth
-	$(MAKE) -C tForth
+# sub-makes:
+# 	$(MAKE) -C ../psymon all
+# 	$(MAKE) -C boot-rom all
+# 	$(MAKE) -C boot-sector all
+# 	$(MAKE) -C os all
+# 	$(MAKE) -C utils all
+# 	$(MAKE) -C my-utils all
+# # 	$(MAKE) -C FigForth
+# 	$(MAKE) -C tForth
 
 init: boot-sector/BootSector.bin os/MPX9.SY
 	$(MPX9DSK) $(TGTDSK) --init boot-sector/BootSector.bin os/MPX9.SY -f 
 
-foo1.dsk: init sub-makes
-# 	$(MPX9DSK) $(TGTDSK) -n -w $(wildcard utils/*.cm) -f 
-# 	$(MPX9DSK) $(TGTDSK) -n -w $(wildcard my-utils/*.cm) -f 
+$(TGTDSK): init $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) # sub-makes
+	$(MPX9DSK) $(TGTDSK) -n -w $($^:init=)$(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) -f 
 
 test: $(EPROMS) $(TGTDSK) 
 	../../tools/usim/percom/percom -1 $(TGTDSK) -2 tForth/tforth.dsk -- $(EPROMS)
@@ -45,6 +69,4 @@ clean:
 	$(MAKE) -C my-utils clean
 # 	$(MAKE) -C FigForth clean
 	$(MAKE) -C tForth clean
-
-clean:
 	-$(CLEAN)
