--- a/percom/mpx9/my-utils/Makefile
+++ b/percom/mpx9/my-utils/Makefile
@@ -3,7 +3,7 @@ include ../Makefile.inc
 SRCS=do.asm echo.asm HelloWorld.asm HexDump.asm listdcb.asm mycopy.asm name.asm \
 	set.asm RamDiskL.asm nCmdLine.asm loadhi.asm
 OBJS=$(SRCS:asm=cm)
-TGTDSK=../foo1.dsk
+TGTDSK=../system.dsk
 
 all: $(OBJS)
 	../$(MPX9DSK) $(TGTDSK) -w -n $(OBJS) -f
