Initial test of mpx9+ boot-loader this combines using lwar and lwlink to build an executable. also prototyping self relocating that moves it self to just below MPX9 and then continues execution.

--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,17 @@ tools/lwtools-4.19/
 tools/coco-disasm/
 tools/usim/
 percom/mpx9/foo1.dsk
+*.obj
 *.lst
 *.bak
 *.ihex
 *.bin
 *.cm
+*.cm1
 
 *.SY
 
 *.dsk
 
 tools/f9dasm/
+tools/pretty6502
