--- a/percom/mpx9/Makefile
+++ b/percom/mpx9/Makefile
@@ -51,8 +51,8 @@ os/MPX9.SY: os/mpx9.bin
 init: boot-sector/BootSector.bin os/MPX9.SY
 	$(MPX9DSK) $(TGTDSK) --init boot-sector/BootSector.bin os/MPX9.SY -f 
 
-$(TGTDSK): init $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) # sub-makes
-	$(MPX9DSK) $(TGTDSK) -n -w $($^:init=)$(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) -f 
+$(TGTDSK): init                $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) my-utils/abc.cm1 # sub-makes
+	$(MPX9DSK) $(TGTDSK) -n -w $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) my-utils/abc.cm1 -f 
 
 test: $(EPROMS) $(TGTDSK) 
 	../../tools/usim/percom/percom -1 $(TGTDSK) -2 tForth/tforth.dsk -- $(EPROMS)
@@ -70,3 +70,16 @@ clean:
 # 	$(MAKE) -C FigForth clean
 	$(MAKE) -C tForth clean
 	-$(CLEAN)
+
+my-utils/abc1.obj: my-utils/abc1.asm 
+my-utils/abc2.obj: my-utils/abc2.asm 
+my-utils/abc.lib: my-utils/abc1.obj my-utils/abc2.obj
+my-utils/abc.cm1: my-utils/abc.obj my-utils/abc.lib
+	$(LINKER_) $(LDLAGS) -slink.ld -mmy-utils/abc.map -o$@ $? 
+abc: my-utils/abc.cm1
+
+
+# abc.lib: abc1.obj abc2.obj
+# my-utils/abc.cm1: abc.obj abc.lib
+# 	$(LINKER_) $(LDLAGS) -slink.ld -mabc.map -o$@ $? 
+# abc: my-utils/abc.cm1
