Formatting and conflict cleanup.

--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,17 @@ tools/coco-disasm/
 tools/usim/
 percom/mpx9/foo1.dsk
 *.obj
+*.map
+*.lib
 *.lst
 *.bak
 *.ihex
 *.bin
 *.cm
 *.cm1
-
 *.SY
-
 *.dsk
 
+*.sublime-workspace
 tools/f9dasm/
 tools/pretty6502
