Regression test support (not working), missed details re moving the percom version of usim and the debugger to this repo.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ percom/mpx9/foo1.dsk
 *.dsk
 *.sym
 *.o
+*.log
 *.sublime-workspace
 tools/f9dasm/
 tools/pretty6502
@@ -24,3 +25,5 @@ tools/LWTools-manual.pdf
 tools/as9/
 tools/usim-save*/
 tools/usimdbg/
+tools/percom/percom
+tools/percom/percomd
