Lots of cleanup. Sorted .gitignore Added Building the system. section to README.md Makefile can now build percom and percomd Mpx9dsk.py --init now supports --normalcase Psymon correctly detects code will not fit in eprom.

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,30 @@
-tools/lwtools/
-tools/lwtools-4.19/
-tools/coco-disasm/
-tools/usim/
-percom/mpx9/foo1.dsk
-*.obj
-*.map
-*.lib
-*.lst
 *.bak
-*.ihex
 *.bin
 *.cm
 *.cm1
-*.md
-*.SY
 *.dsk
-*.sym
-*.o
+*.ihex
+*.lib
 *.log
+*.lst
+*.map
+*.md
+*.o
+*.obj
+**/*.s19
 *.sublime-workspace
-tools/f9dasm/
-tools/pretty6502
-tools/LWTools-manual.pdf
+*.sy
+*.sym
+percom/mpx9/*.dsk
 tools/as9/
+tools/coco-disasm/
+tools/f9dasm/
+tools/lwtools-4.19/
+tools/LWTools-manual.pdf
+tools/lwtools/
+/tools/percom/percom*
+tools/pretty6502
 tools/usim-save*/
+tools/usim/
 tools/usimdbg/
-tools/percom/percom
-tools/percom/percomd
+**.s19
