initial changes for finishing Boot loading forth from source.

--- a/percom/mpx9/Makefile
+++ b/percom/mpx9/Makefile
@@ -3,6 +3,8 @@ include Makefile.inc
 EPROMS=../psymon/psymon.ihex ../psymon/psymon-ext.ihex boot-rom/BootRom.ihex
 TGTDSK=system.dsk
 BLKDSK=blank.dsk
+FTHDSK=forth.dsk
+BLKDSK2=blank2.dsk
 
 UTILS=create DskEdt exec list memtst OutVectr copy hexload
 UTIL_SRCS=$(foreach file,$(UTILS),utils/$(file).asm)
@@ -43,7 +45,7 @@ MODULE_OBJS=$(MODULE_SRCS:.asm=.md)
 # $(info MODULE_OBJS $(MODULE_OBJS))
 
 
-all: $(EPROMS) $(TGTDSK)
+all: $(EPROMS) $(TGTDSK) $(BLKDSK) $(FTHDSK) $(BLKDSK2)
 
 .PHONY:
 percom:
@@ -74,22 +76,28 @@ sub-makes:
 # 	$(MPX9DSK) $(TGTDSK) --init boot-sector/BootSector.bin os/MPX9.SY -f 
 
 $(TGTDSK): boot-sector/BootSector.bin os/mpx9.sy                                               $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) mpx9+/mpx9+.cm1 $(MODULE_OBJS) # sub-makes
-	$(MPX9DSK) $(TGTDSK) -n --init boot-sector/BootSector.bin os/mpx9.sy -f 
+	$(MPX9DSK) $(TGTDSK) -n --init boot-sector/BootSector.bin os/mpx9.sy
 	$(MPX9DSK) $(TGTDSK) -n -w --entry 0x1000 --buffer 0x1000 $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) mpx9+/mpx9+.cm1 $(MODULE_OBJS) -f 
 
 $(BLKDSK): boot-sector/BootSector.bin os/mpx9.sy
 	$(MPX9DSK) $(BLKDSK) -n --init boot-sector/BootSector.bin os/mpx9.sy -f 
-	$(MPX9DSK) $(BLKDSK) -n -w --entry 0x1000 --buffer 0x1000 utils/list.cm -f 
 
+$(FTHDSK): boot-sector/BootSector.bin os/mpx9.sy tForth/tforth09.cm tForth/*.4th
+	$(MPX9DSK) $(FTHDSK) -n --init boot-sector/BootSector.bin os/mpx9.sy 
+	$(MPX9DSK) $(FTHDSK) -n -w tForth/tforth09.cm --entry 0 --buffer 0
+	$(MPX9DSK) $(FTHDSK) -n -w tForth/*.4th -f
 
-test: $(EPROMS) $(TGTDSK) 
-	../../tools/percom/percom -1 $(TGTDSK) -2 tForth/tforth.dsk -3 $(BLKDSK) -- $(EPROMS)
+$(BLKDSK2): boot-sector/BootSector.bin os/mpx9.sy
+	$(MPX9DSK) $(BLKDSK2) -n --init boot-sector/BootSector.bin os/mpx9.sy -f 
 
-testd: $(EPROMS) $(TGTDSK) 
-	../../tools/percom/percomd -1 $(TGTDSK) -2 tForth/tforth.dsk -3 $(BLKDSK) -- $(EPROMS)
+test: $(EPROMS) $(TGTDSK) $(FTHDSK) $(BLKDSK2)
+	../../tools/percom/percom -1 $(TGTDSK) -2 $(FTHDSK) -3 $(BLKDSK) -4 $(BLKDSK2) -- $(EPROMS)
 
-testdv: $(EPROMS) $(TGTDSK) 
-	../../tools/percom/percomd -v -v -1 $(TGTDSK) -2 tForth/tforth.dsk -3 $(BLKDSK) -- $(EPROMS)
+testd: $(EPROMS) $(TGTDSK) $(FTHDSK) $(BLKDSK2)
+	../../tools/percom/percomd -1 $(TGTDSK) -2 $(FTHDSK) -3 $(BLKDSK) -4 $(BLKDSK2) -- $(EPROMS)
+
+testdv: $(EPROMS) $(TGTDSK) $(FTHDSK) $(BLKDSK2)
+	../../tools/percom/percomd -v -v -1 $(TGTDSK) -2 $(FTHDSK) -3 $(BLKDSK) -4 $(BLKDSK2) -- $(EPROMS)
 
 clean:
 	$(MAKE) -C ../psymon clean
